--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,19 @@ http://www.templatemo.com/tm-486-new-event
 }
 
 
+#apple4{
+    /*background-color:#9F2B68;*/
+    margin-left: 17px;
+    margin-top: 0px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    /*background:linear-gradient(white, purple); */
+    border-radius: 10px;
+    /*padding: 20px;*/
+    border: 1px solid grey;
+}
+
+
 
 @media (min-width:629px) {
   #hide {
