--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,10 @@ http://www.templatemo.com/tm-486-new-event
     border-radius: 10px;
     /*padding: 20px;*/
     border: 1px solid grey;
+    padding-top: 50px;
+    padding-right: 50px;
+    padding-bottom: 50px;
+    padding-left: 50px;
 }
 
 
