--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,9 @@ http://www.templatemo.com/tm-486-new-event
     padding-right: 50px;
     padding-bottom: 50px;
     padding-left: 50px;
+    background-color: rgba(0, 0, 0, 0.6);
+    
+	
 }
 
 
