--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ http://www.templatemo.com/tm-486-new-event
     padding-right: 50px;
     padding-bottom: 50px;
     padding-left: 50px;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: black;
     
 	
 }
